@@ -1,4 +1,4 @@
-#Mon Feb 12 21:57:01 EST 2007
+#Tue Feb 13 07:54:36 EST 2007
 major_version=1.6b
-minor_version=38
+minor_version=40
 app_name=eLife
